added test to increase test coverage (#230)